# PornOS

./: .gdb_history  .gitignore  Cargo.toml  Cargo.toml.orig  LICENSE  Makefile  README.md  boot.s  bruh.txt  build.rs  debug.norg  flake.nix  justfile  last_offset.txt  linker_script.ld  make_bootable.bash  make_iso.bash  notes.norg  paging.norg  porno_history.txt  porno_target.json  qemu.txt  rust-toolchain.toml  shell.nix  target.json  tlb.txt  tlb_my.txt  todo.norg  x86_64.json
.cargo/: config.toml  runner.sh
.nvim/: init.lua  neoconf.json
boot/grub/: grub.cfg
build_utils/: limine.cfg  linker.ld  make_bootable.bash  make_iso.bash  multiboot.as  run.bash
conf/: limine.cfg  limine.conf  linker.ld
grub/: linker.ld  make_iso.bash  multiboot.as
isodir/: limine.cfg
src/: idt.rs  interrupt.rs  interrupts.rs  lib.rs  main.rs  multiboot.c  qemu.rs  serial.rs  stivale.rs
src/boot/: mod.rs
src/boot/stivale/: mod.rs
src/boot/stivale/consoles/: mod.rs  text_mode_structure.rs
src/gdt/: mod.rs  mod.rs.orig  segment_descriptor.rs  tss.rs
src/idt/: interrupt_type.rs  mod.rs  vector_gate.rs
src/interrupt/: .rs  bound_range_exceeded.rs  debug.rs  double_fault.rs  gate.rs  general_protection_fault.rs  machine_check.rs  mod.rs  mod.rs.orig  page_fault.rs  stack_segment_fault.rs
src/io/: limine_terminal.rs  logger.rs  mod.rs  serial.rs
src/kasync/: mod.rs  task.rs  waker.rs
src/kasync/executer/: dummy.rs  mod.rs
src/klib/: mod.rs
src/klib/arch/: mod.rs
src/klib/arch/x86_64/: mod.rs
src/klib/lock/: mod.rs  mutex.rs  once.rs  spinlock.rs
src/memory/: allocator.rs  frame_allocator.rs  heap.rs  mapper.rs  mod.rs  mod.rs.orig  physical_memory_mapper.rs
src/memory/addr/: mod.rs  phys_addr.rs  virt_addr.rs
src/memory/level4_paging/: mod.rs  page.rs  page_table.rs  pdpt.rs  pmle4.rs
src/memory/level4_paging/util/: memmap.rs  memmaps.rs  mod.rs
src/memory/paging/: README.md  heap.rs  init.rs  mem_structure.rs  mod.rs  page_frame.rs  page_size.rs  simp.rs  virtual_mmap.rs
src/memory/paging/alloc/: dummy.rs  linked_list.rs  mod.rs
src/memory/paging/frame_allocator/: dummy.rs  frame.rs  mod.rs  phys_frame_index.rs
src/memory/paging/level4_paging/: mod.rs  page.rs  page_table.rs  pdpt.rs  pmle4.rs
src/memory/paging/physical_mmap/: mod.rs  (+3 more)
src/memory/physical/: memmap_entry.rs  memmaps.rs  mod.rs
src/memory/physical_memory_map/: main.rs  mem_chunk.rs  mod.rs  startup.rs
src/memory/types/: byte.rs  bytes.rs  mod.rs
src/memory/util/: align.rs  mod.rs
src/scheduling/: mod.rs
src/scheduling/cooperative/: mod.rs
src/vga/: color.rs  color_code.rs  mod.rs  vga_char.rs
src/vga/utils/: mod.rs
tests/: smol.rs
(+65 files in other folders)
