[package]
name = "pornos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["frame-allocator-stack", "global-allocator-linked-list"]

# frame allocators
frame-allocator-array-stack = []
frame-allocator-bitflag = []
frame-allocator-stack = []

# global allocators
global-allocator-dummy = []
global-allocator-linked-list = []

# since `cargo test` doesn't work (*sad pika noises*) I will add tests as a
# feature
test = []

[dependencies]
limine = "0.1.9"
spin = "0.9.4"
x86_64 = "0.14.10"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
bitflags = "1.3.2"
linked_list_allocator = "0.10.4"
uart_16550 = "0.2.18"
tinyvec = "1.6.0"
